metadata/root/main/default/objects/Custom_AL_Object__c/Custom_AL_Object__c.object-meta.xml
<CustomObject>
    <label>Custom AL Object</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Custom AL Object  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom AL Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>