metadata/root/main/default/objects/Custom_AL_Object__c/fields/AL_Location__c.field-meta.xml
<CustomField>
    <fullName>AL_Location__c</fullName>
    <label>AL Location</label>
    <scale>1</scale>
    <type>Location</type>
</CustomField>