metadata/root/main/default/objects/Custom_AL_Object__c/fields/AL_Year__c.field-meta.xml
<CustomField>
    <fullName>AL_Year__c</fullName>
    <label>AL Year</label>
    <required>true</required>
    <type>Date</type>
</CustomField>