metadata/root/main/default/objects/Custom_AL_Object__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#33FF33</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Blue</fullName>
                <color>#3333FF</color>
                <label>Blue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>